--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
+        <%= link_to "Event app", welcome_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li> <%= link_to "log in", sessions_path %></li>
