--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,30 +1,35 @@
+<div class="container">
+
+  <h2> listing Events </h2>
 
 
-<h2> listing users </h2>
 
-
-
-<table border="1px">
-  <tr>
-    <th>title</th>
-    <th>venue</th>
-    <th>date</th>
-    <th>time</th>
-    <th>description</th>
-
-    <th colspan="2"></th>
-  </tr>
- 
-  <% @events.each do |event| %>
+  <table border="1px">
+    <tr>
+      <th>title</th>
+      <th>venue</th>
+      <th>date</th>
+      <th>time</th>
+      <th>description</th>
+      <th> </th>
+      <th colspan="2"></th>
+    </tr>
+    
+    <% @events.each do |event| %>
     <tr>
       <td><%= event.title %></td>
       <td><%= event.venue %></td>
       <td><%= event.date %></td>
       <td><%= event.time %></td>
       <td><%= event.description %></td>
+      <td><%= link_to "participants", user_event_path(current_user, event), :remote => true, :data => {:toggle => "modal", :target => "#myModal"}%></td>
 
-
-  
+      
     </tr>
-  <% end %>
-</table>
+    <% end %>
+  </table>
+
+  <div id="myModal" class="modal fade" role="dialog">
+    
+  </div>
+</div>
