--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,46 +1,182 @@
 
-<body >
-<center>
-<h1>New event Creation</h1>
+<div class="container">
 
-<div >
+  <div class="row">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <title>Bootstrap Example</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+    <body>
 
-<%= form_for :event,url: user_events_path do |f| %>
+      <div class="container">
+        <h2></h2>
+        <!-- Trigger the modal with a button -->
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Event</button>
 
-<div >
-  
-<p >
-	<%= f.label :title %><br>
-	<%= f.text_field :title %> 
-	
-</p>
-<p >
-	<%= f.label :venue %><br>
-	<%= f.text_field :venue %>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+            
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">New Event</h4>
+              </div>
+              <div class="modal-body">
+                <center>
+                  <h1>New event Creation</h1>
 
-</p>
-<p >
-	<%= f.label :date %><br>
-	<%= f.text_field :date %>
+                  <div >
 
-</p>
-<p >
-	<%= f.label :time %><br>
-	<%= f.text_field :time %>
+                    <%= form_for :event,url: user_events_path do |f| %>
+
+                    <div >
+                      
+                      <p >
+                       <%= f.label :title %><br>
+                       <%= f.text_field :title %> 
+                       
+                     </p>
+                     <p >
+                       <%= f.label :venue %><br>
+                       <%= f.text_field :venue %>
+
+                     </p>
+                     <p >
+                       <%= f.label :date %><br>
+                       <%= f.text_field :date %>
+
+                     </p>
+                     <p >
+                       <%= f.label :time %><br>
+                       <%= f.text_field :time %>
 
 
-</p>
-<p >
-	<%= f.label :description %><br>
-	<%= f.text_area :description %>
+                     </p>
+                     <p >
+                       <%= f.label :description %><br>
+                       <%= f.text_area :description %>
 
 
-</p>
-<p>
-	<%= f.submit %>
-</p>
+                     </p>
+                     <ul style="list-style:none; display:inline">
+                       <% @users.each do |role| %>
+                       <li>
+                         <%= check_box_tag 'role_ids[]', role.id %>
+                         <%= role.username %>
+                       </li>
+                       <% end %>
+                     </ul>
+                     <p>
+                       <%= f.submit %>
+                     </p>
+                   </div>
+                   <% end %>
+                 </div>
+               </center>
+             </div>
+             <div class="modal-footer"></button>
+             </div>
+           </div>
+           
+         </div>
+       </div>
+     </div>
+
+
+
+     <div class="row">
+       <div class="col-xs-6">
+        <% @events.each do |event| %>
+
+        <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px">
+         <label style="color:green">Event:</label><label> <%= event.title %></label><br>
+         
+         <label style="color:green">Description: </label><label><%= event.description %></label>		
+
+
+
+         <%= link_to 'Edit Event', edit_user_event_path(@user, event) %>
+         <%@participants=event.invitee%>
+         <% binding.pry%>
+         
+
+         <div class="container">
+          
+          <!-- Trigger the modal with a button -->
+          <a  data-toggle="modal" data-target="#myModal2">Participants</a>
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal2" role="dialog">
+            <div class="modal-dialog">
+              
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">List of Participants		</h4>
+                </div>
+                <div class="modal-body">
+                  
+                  <% @participants.each do |user| %>
+                  
+                  <p><%=user.fname %><p>
+                    
+                    
+                    <% end %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+                
+              </div>
+            </div>
+            
+          </div>
+
+        </div>
+        <% end %>
+
+      </div>
+      <div class="col-xs-6">
+       adsff
+     </div>
+
+
+
+
+
+
+   </div>
+   <%params[:id]=params[:user_id]%>
+   
+   <button type="button" class="btn btn-info btn-lg" >Logout</button>
+
+ </body>
+ </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
-<% end %>
-</div>
-</center>
-</body>
+
+
+
+
