--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
         <%= link_to "Event app", welcome_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li> <%= link_to "log in", sessions_path %></li>
+            <li> <%= link_to "log in", log_in_path %></li>
             <li> <%= link_to "Sign up", new_user_path %></li>
 
           </ul>
