--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,28 @@
+<%if @event.owner_id == @user.id%> 
+
 <%= form_for :event, url: user_event_path, method: :put do |f|%>
 
+<%= f.label :Enter_Event_name%>    <%= f.text_field :title ,:disabled => true %></br></br>
+<%= f.label :Enter_Venue%>       <%= f.text_field :venue,:disabled => true %></br></br>
+<%= f.label :Enter_date%>       <%= f.text_field :date ,:disabled => true%></br></br>
+<%= f.label :Enter_time %>           <%= f.text_field :time,:disabled => true %></br></br>
+<%= f.label :Enter_description%>    <%= f.text_area :description, size: "60x5",:disabled => true %></br></br>
+<%= f.label :Invited_by %> </br>    
+<%= current_user.email%> </br>
+ </br>
+<%= f.label :Select_invitee %> 
+<%= f.label :Enter_Status%>  
 
-<%= f.label :Enter_Event_name%>    <%= f.text_field :title %></br></br>
-<%= f.label :Enter_Venue%>       <%= f.text_field :venue %></br></br>
+<%= f.submit :Submit,:class=>"btn" %>
+<%end%>
+<%else%>
+<%binding.pry%>
+<%= form_for :event, url: user_event_path, method: :put do |f|%>
+
+<%= f.label :Enter_Event_name%>    <%= f.text_field :title  %></br></br>
+<%= f.label :Enter_Venue%>       <%= f.text_field :venue%></br></br>
 <%= f.label :Enter_date%>       <%= f.text_field :date %></br></br>
-<%= f.label :Enter_time %>           <%= f.text_field :time %></br></br>
+<%= f.label :Enter_time %>           <%= f.text_field :time%></br></br>
 <%= f.label :Enter_description%>    <%= f.text_area :description, size: "60x5" %></br></br>
 <%= f.label :Invited_by %> </br>    
 <%= current_user.email%> </br>
@@ -14,6 +32,5 @@
 
 <%= f.submit :Submit,:class=>"btn" %>
 
-<%#end%>
-
+<%end%>
 <%end%>
