--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,15 @@
+
+<header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to "Event app", welcome_path, id: "logo" %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li> <%= link_to "log in", log_in_path %></li>
+
+          </ul>
+        </nav>
+      </div>
+      </header>
 <h1>User signup</h1>
 <div class="row">
 <div class="col-sm-2"></div>
