--- a/app/views/events/_header.html.erb
+++ b/app/views/events/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "Event app", welcome_path, id: "logo" %>
+        <%= link_to "Event app", new_user_event_path(@user), id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li> <%= link_to "log in", log_in_path %></li>
-            <li> <%= link_to "Sign up", new_user_path %></li>
+            
+            <li> <%= link_to "Logout", welcome_path %></li>
 
           </ul>
         </nav>
