--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,5 @@
+      <%= render 'events/header' %>
+
 <%if @event.owner_id == @user.id%> 
 
 <%= form_for :event, url: user_event_path, method: :put do |f|%>
@@ -8,10 +10,18 @@
 <%= f.label :Enter_time %>           <%= f.text_field :time,:disabled => true %></br></br>
 <%= f.label :Enter_description%>    <%= f.text_area :description, size: "60x5",:disabled => true %></br></br>
 <%= f.label :Invited_by %> </br>    
-<%= current_user.email%> </br>
+<%= current_user.username%> </br>
+
  </br>
-<%= f.label :Select_invitee %> 
-<%= f.label :Enter_Status%>  
+ <%@parts=@event.invitee%>
+<%= f.label :List_of_Invitees %>
+<% @parts.each do |role| %>
+                       <li>
+                         
+                         <%= role.username %>
+                       </li>
+                       <% end %> 
+<br>
 
 <%= f.submit :Submit,:class=>"btn" %>
 <%end%>
@@ -25,10 +35,18 @@
 <%= f.label :Enter_time %>           <%= f.text_field :time%></br></br>
 <%= f.label :Enter_description%>    <%= f.text_area :description, size: "60x5" %></br></br>
 <%= f.label :Invited_by %> </br>    
-<%= current_user.email%> </br>
+<%= current_user.username%> </br>
  </br>
 <%= f.label :Select_invitee %> 
-<%= f.label :Enter_Status%>  
+ <%@parts=@event.invitee%>
+
+<% @parts.each do |role| %>
+                       <li>
+                         <%= check_box_tag 'role_ids[]', role.id %>
+                         <%= role.username %>
+                       </li>
+                       <% end %>
+<br> 
 
 <%= f.submit :Submit,:class=>"btn" %>
 
