--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,4 @@
+      <%= render 'events/header' %>
 
 <div class="container">
 
@@ -16,8 +17,9 @@
 
       <div class="container">
         <h2></h2>
+        <div class="col-xs-10"></div>
         <!-- Trigger the modal with a button -->
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Event</button>
+        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">Create Event</button>
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
@@ -93,22 +95,25 @@
 
 
      <div class="row">
-       <div class="col-xs-6">
+
+       <div class="col-xs-12  ">
         <% @events.each do |event| %>
 
         <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px">
+          <div class="col-xs-6">
          <label style="color:green">Event:</label><label> <%= event.title %></label><br>
          
          <label style="color:green">Description: </label><label><%= event.description %></label>		
 
-
-
-         <%= link_to 'Edit Event', edit_user_event_path(@user, event) %>
-
+         </div>
+         <div class="col-xs-3">
+         <%= link_to 'Edit Event', edit_user_event_path(@user, event),{:class => "btn btn-success"} %>
+         </div>
+         <div class="col-xs-3">
          <div class="container">
           
           <!-- Trigger the modal with a button -->
-          <a  data-toggle="modal" data-target="#myModal2-<%=event.id%>">Participants</a>
+          <button class="btn btn-success" data-toggle="modal" data-target="#myModal2-<%=event.id%>">Participants</button>
 
           <!-- Modal -->
           <div class="modal fade" id="myModal2-<%=event.id%>" role="dialog">
@@ -140,14 +145,12 @@
           </div>
           
         </div>
-
+        </div>
       </div>
       <% end %>
 
     </div>
-    <div class="col-xs-6">
-     adsff
-   </div>
+    
 
 
 
@@ -156,8 +159,7 @@
 
  </div>
  <%params[:id]=params[:user_id]%>
- 
- <button type="button" class="btn btn-info btn-lg" >Logout</button>
+
 
 </body>
 </html>
