--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,16 @@
 
+<header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to "Event app", welcome_path, id: "logo" %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li> <%= link_to "log in", log_in_path %></li>
+            <li> <%= link_to "Sign up", new_user_path %></li>
+
+          </ul>
+        </nav>
+      </div>
+      </header>
 
 <h2> listing users </h2>
 
