--- a/app/views/events/_header.html.erb
+++ b/app/views/events/_header.html.erb
@@ -4,7 +4,7 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             
-            <li> <%= link_to "Logout", welcome_path %></li>
+            <li> <%= link_to "Logout", log_out_path(@user) %></li>
 
           </ul>
         </nav>
