--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -53,7 +53,7 @@
                      </p>
                      <p >
                        <%= f.label :date %><br>
-                       <%= f.text_field :date %>
+                       <%= f.text_field :date, "data-provide" => 'datepicker' %>
 
                      </p>
                      <p >
