--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,93 +1,130 @@
       <%= render 'events/header' %>
 
-<div class="container">
+      <div class="container" ng-app="directoryApp" ng-controller="directoryController">
 
-  <div class="row">
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-      <title>Bootstrap Example</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
-    <body>
+        <div class="row">
+          <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
+           <script type="text/javascript">
+             // console.log(json); // this will show the info it in firebug console
 
-      <div class="container">
-        <h2></h2>
-        <div class="col-xs-10"></div>
-        <!-- Trigger the modal with a button -->
-        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">Create Event</button>
+             angular.module('directoryApp',[])
+             .controller('directoryController',function($scope,$http){
+              // var dirlist=this;
+              // $scope.mylist =[];
+              // $.getJSON("/events.json", function(data){
+              //   $scope.mylist=data;
+              // debugger;
+              // });
+              $http.get('/events.json')
+              .then(function(res){
+                $scope.mylist = res.data;                
+              });
 
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-            
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">New Event</h4>
+
+              // $scope.list=mylist;
+              // {
+              //   $scope.list=data;
+              //   console.log(data);
+
+              // }) ;
+            // $scope.list = [{"name":"sachin"},{"name":"qwinix"}]
+          });
+        </script>
+
+
+          <div class="container" >
+            <div class="col-xs-6">
+
+            </div>
+            <div class="col-xs-4">
+             <div id="custom-search-input">
+              <div class="input-group col-md-12">
+                <input type="text" class="form-control input-lg" placeholder="Search events"  ng-model="searchText"/>
+                <span class="input-group-btn">
+                <button class="btn btn-info btn-lg" type="button">
+                    <i class="glyphicon glyphicon-search"></i>
+                  </button>
+                </span>
               </div>
-              <div class="modal-body">
-                <center>
-                  <h1>New event Creation</h1>
+            </div>
+          </div>
+          <!-- Trigger the modal with a button -->
+          <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#myModal">Create Event</button>
 
-                  <div >
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
 
-                    <%= form_for :event,url: user_events_path do |f| %>
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">New Event</h4>
+                </div>
+                <div class="modal-body">
+                  <center>
+                    <h1>New event Creation</h1>
 
                     <div >
-                      
-                      <p >
-                       <%= f.label :title %><br>
-                       <%= f.text_field :title %> 
-                       
-                     </p>
-                     <p >
-                       <%= f.label :venue %><br>
-                       <%= f.text_field :venue %>
 
-                     </p>
-                     <p >
-                       <%= f.label :date %><br>
-                       <%= f.text_field :date, "data-provide" => 'datepicker' %>
+                      <%= form_for :event,url: user_events_path do |f| %>
 
-                     </p>
-                     <p >
-                       <%= f.label :time %><br>
-                       <%= f.text_field :time %>
+                      <div >
 
+                        <p >
+                         <%= f.label :title %><br>
+                         <%= f.text_field :title %> 
 
-                     </p>
-                     <p >
-                       <%= f.label :description %><br>
-                       <%= f.text_area :description %>
+                       </p>
+                       <p >
+                         <%= f.label :venue %><br>
+                         <%= f.text_field :venue %>
+
+                       </p>
+                       <p >
+                         <%= f.label :date %><br>
+                         <%= f.text_field :date, "data-provide" => 'datepicker' %>
+
+                       </p>
+                       <p >
+                         <%= f.label :time %><br>
+                         <%= f.text_field :time %>
 
 
-                     </p>
-                     <ul style="list-style:none; display:inline">
-                       <% @users.each do |role| %>
-                       <li>
-                         <%= check_box_tag 'role_ids[]', role.id %>
-                         <%= role.username %>
-                       </li>
-                       <% end %>
-                     </ul>
-                     <p>
-                       <%= f.submit %>
-                     </p>
+                       </p>
+                       <p >
+                         <%= f.label :description %><br>
+                         <%= f.text_area :description %>
+
+
+                       </p>
+                       <ul style="list-style:none; display:inline">
+                         <% @users.each do |role| %>
+                         <li>
+                           <%= check_box_tag 'role_ids[]', role.id %>
+                           <%= role.username %>
+                         </li>
+                         <% end %>
+                       </ul>
+                       <p>
+                         <%= f.submit %>
+                       </p>
+                     </div>
+                     <% end %>
                    </div>
-                   <% end %>
-                 </div>
-               </center>
-             </div>
-       
+                 </center>
+               </div>
+
              </div>
            </div>
-           
+
          </div>
        </div>
      </div>
@@ -97,85 +134,29 @@
      <div class="row">
 
        <div class="col-xs-12  ">
-        <% @events.each do |event| %>
+        <div class="row" > <!-- angular row -->         
+        <div  >
+          <div ng-repeat="item in mylist | filter : searchText" >
 
-        <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px">
-          <div class="col-xs-6">
-         <label style="color:green">Event:</label><label> <%= event.title %></label><br>
-         
-         <label style="color:green">Description: </label><label><%= event.description %></label>		
-
-         </div>
-         <div class="col-xs-3">
-         <%= link_to 'Edit Event', edit_user_event_path(@user, event),{:class => "btn btn-success"} %>
-         </div>
-         <div class="col-xs-3">
-         <div class="container">
-          
-          <!-- Trigger the modal with a button -->
-          <button class="btn btn-success" data-toggle="modal" data-target="#myModal2-<%=event.id%>">Participants</button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="myModal2-<%=event.id%>" role="dialog">
-            <div class="modal-dialog">
-              
-              <!-- Modal content-->
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">List of Participants		</h4>
-                </div>
-                <div class="modal-body">
-         
-                  <%@participants=event.invitee%>
-
-                  <% @participants.each do |user| %>
-                  
-                  <p><%= user.fname %></p>
-                  
-                  
-                  <% end %>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-              
-            </div>
-          </div>
-          
-        </div>
-        </div>
-      </div>
-      <% end %>
-
-    </div>
-    
+            <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px" >
+              <div class="col-xs-6">
+               <label style="color:green">Event:</label><label> {{item.title}}</label><br>
+               <label style="color:green">Description: </label><label>{{item.description}}</label>    
+             </div>
 
 
 
+           </div> <!-- grey color event row end -->
 
 
 
+         </div> <!-- ng repeat end -->
+       </div>
+     </div> <!-- angular row end -->
+
+   </div>
  </div>
  <%params[:id]=params[:user_id]%>
-
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 
