--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
       <%= render 'events/header' %>
-
+      <%= include_gon %>
       <div class="container" ng-app="directoryApp" ng-controller="directoryController">
 
         <div class="row">
@@ -11,7 +11,11 @@
           <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-           <script type="text/javascript">
+          <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+          <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css" integrity="sha256-zV9aQFg2u+n7xs0FTQEhY0zGHSFlwgIu7pivQiwJ38E=" crossorigin="anonymous" />
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js" integrity="sha256-xoE/2szqaiaaZh7goVyF5p9C/qBu9dM3V5utrQaiJMc=" crossorigin="anonymous"></script>
+          <script type="text/javascript">
              // console.log(json); // this will show the info it in firebug console
 
              angular.module('directoryApp',[])
@@ -35,11 +39,20 @@
 
               // }) ;
             // $scope.list = [{"name":"sachin"},{"name":"qwinix"}]
+             $scope.user=gon.user;
           });
-        </script>
+             debugger;
+             $( function() {
+              $( "#datepicker" ).datepicker();
+              minDate: 0;
+
+              $('#timepicker').timepicker();
+            } );
+             // gon.user=@events;
+           </script>
 
 
-          <div class="container" >
+           <div class="container" >
             <div class="col-xs-6">
 
             </div>
@@ -48,7 +61,7 @@
               <div class="input-group col-md-12">
                 <input type="text" class="form-control input-lg" placeholder="Search events"  ng-model="searchText"/>
                 <span class="input-group-btn">
-                <button class="btn btn-info btn-lg" type="button">
+                  <button class="btn btn-info btn-lg" type="button">
                     <i class="glyphicon glyphicon-search"></i>
                   </button>
                 </span>
@@ -90,12 +103,12 @@
                        </p>
                        <p >
                          <%= f.label :date %><br>
-                         <%= f.text_field :date, "data-provide" => 'datepicker' %>
+                         <%= f.text_field :date, :id => 'datepicker' %>
 
                        </p>
                        <p >
                          <%= f.label :time %><br>
-                         <%= f.text_field :time %>
+                         <%= f.text_field :time, :id => 'timepicker' %>
 
 
                        </p>
@@ -135,16 +148,24 @@
 
        <div class="col-xs-12  ">
         <div class="row" > <!-- angular row -->         
-        <div  >
-          <div ng-repeat="item in mylist | filter : searchText" >
+          <div >
+            <div ng-repeat="event in mylist | filter : searchText " >
 
-            <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px" >
-              <div class="col-xs-6">
-               <label style="color:green">Event:</label><label> {{item.title}}</label><br>
-               <label style="color:green">Description: </label><label>{{item.description}}</label>    
+              <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px" >
+                <div class="col-xs-6">
+                  <label style="color:green">Event:</label><label> {{event.title}}</label><br>
+                  <label style="color:green">Description: </label><label>{{event.description}}</label> <br>
+                </div>
+                <!-- <div class="col-xs-3">
+                <label style="color:green">Date: </label><label>{{event.date}}</label> <br>
+                <label style="color:green">Time: </label><label>{{event.time}}</label> 
+                  
+              </div> -->
+
+              <div class="col-xs-3">
+              <button class="btn btn-success" ng-href="/users/{{user.id}}/events/{{event.id}}/edit"> View / Edit </button>
+               
              </div>
-
-
 
            </div> <!-- grey color event row end -->
 
