--- a/app/views/events/temp.html.erb
+++ b/app/views/events/temp.html.erb
@@ -1,51 +1,31 @@
-<% @events.each do |event| %>
-
-        <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px" >
-          <div class="col-xs-6">
-           <label style="color:green">Event:</label><label> <%= event.title %></label><br>
-
-           <label style="color:green">Description: </label><label><%= event.description %></label>    
-
-         </div>
-         <div class="col-xs-3">
-           <%= link_to 'Edit Event', edit_user_event_path(@user, event),{:class => "btn btn-success"} %>
-         </div>
-         <div class="col-xs-3">
-           <div class="container">
-
-            <!-- Trigger the modal with a button -->
-            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2-<%=event.id%>">Participants</button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="myModal2-<%=event.id%>" role="dialog">
-              <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">List of Participants    </h4>
-                  </div>
-                  <div class="modal-body">
-
-                    <%@participants=event.invitee%>
-
-                    <% @participants.each do |user| %>
-
-                    <p><%= user.fname %></p>
 
 
-                    <% end %>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
+      -----------------------------------
+       <div class="row" > <!-- angular row -->         
+          <div >
+            <div ng-repeat="event in mylist | filter : searchText " >
+
+              <div class="row" style="background-color:#D3D3D3; margin:5px; padding:20px" >
+                <div class="col-xs-6">
+                  <label style="color:green">Event:</label><label> {{event.title}}</label><br>
+                  <label style="color:green">Description: </label><label>{{event.description}}</label> <br>
                 </div>
+                <!-- <div class="col-xs-3">
+                <label style="color:green">Date: </label><label>{{event.date}}</label> <br>
+                <label style="color:green">Time: </label><label>{{event.time}}</label> 
+                  
+              </div> -->
 
-              </div>
-            </div>
+              <div class="col-xs-3">
+              <a class="btn btn-success" ng-href="/users/{{user.id}}/events/{{event.id}}/edit"> View / Edit </a>
+             </div>
 
-          </div>
-        </div>
+            
       </div>
-      <% end %>
+
+           </div> <!-- grey color event row end -->
+
+
+
+         </div> <!-- ng repeat end -->
+       </div> <!-- angular row end -->
