--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,5 @@
       <%= render 'events/header' %>
+      
       <%if current_user.id!=@event.owner_id%> 
 
       <%= form_for :event, url: user_event_path, method: :put do |f|%>
@@ -9,21 +10,23 @@
       <%= f.label :Enter_time %>           <%= f.text_field :time,:disabled => true %></br></br>
       <%= f.label :Enter_description%>    <%= f.text_area :description, size: "60x5",:disabled => true %></br></br>
       <%= f.label :Invited_by %> </br>    
-      <%= current_user.username%> </br>
+      <% owner= User.find_by_id(@event.owner_id)%> 
+      <%= owner.username%> </br>
+
 
     </br>
     <%@parts=@event.invitee%>
     <%= f.label :List_of_Invitees %>
     <% @parts.each do |role| %>
     <li>
-     
+
      <%= role.username %>
    </li>
    <% end %> 
    <br>
-
-   <%= f.submit :Submit,:class=>"btn" %>
+   
    <%end%>
+   <%= button_to "back", new_user_event_path(current_user), { method: :get, class: 'btn btn-success'} %>
    <%else%>
 
    <%= form_for :event, url: user_event_path, method: :put do |f|%>
@@ -37,7 +40,7 @@
    <%= current_user.username%> </br>
  </br>
  <%= f.label :Select_invitee %> 
- <%@parts=@event.invitee%>
+ <%@parts=User.all%>
 
  <% @parts.each do |role| %>
  <li>
@@ -47,7 +50,8 @@
  <% end %>
  <br> 
 
- <%= f.submit :Submit,:class=>"btn" %>
+ <%= f.submit :Submit,:class=>"btn btn-success" %>
+ <%= button_to "back", new_user_event_path(current_user), { method: :get, class: 'btn btn-success   '} %>
 
  <%end%>
  <%end%>
