--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,7 @@
   <h2>
    <label style="color:green"> Phone : </label> <%=@user.phone%>
   </h2>
+  <%if current_user==@user%>
 
   
         <%= button_to "Edit Profile", edit_user_path,method: :get, :class => "btn btn-success" %>
@@ -37,6 +38,9 @@
        <%= button_to 'Delete Account',user_path(@user), method: :delete,:class => "btn btn-danger", data: {
     confirm: "Are you sure? Your account will be deleted !"
     }%>
+    <%else%>
+    <%= button_to "back", new_user_event_path(current_user), { method: :get, class: 'btn btn-success   '} %>
+    <%end%>
     
 
 
